src/client/Chat.less
@import "./colors.less";

.padding() {
    padding: 0px 0px 2px 2px;
}

#chat {
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    .spacing();
    z-index: 0;
    .padding();
    background-color: rgba(20, 20, 24, 0.6);
    overflow: hidden;
    word-wrap: break-word;
    height: 50%;

    &.focused {
        z-index: 1;
        user-select: text;
        height: 100%;
    }

    .author {
        margin-right: 4px;
    }

    #chatMessages {
        padding: 0 8px 0 8px;
        opacity: 0.5;

        .focused& {
            opacity: 1;
        }
    
        li {
            text-align: left;
            z-index: 0;
            pointer-events: none;

            .selectable {
                width: fit-content;
                max-width: 100%;
                margin-right: auto;
                margin-left: 0;
                cursor: text;

                &:focus {
                    outline: none;
                }

                .author {
                }

                .text {
                    font-weight: initial;
                    text-transform: initial;
                    letter-spacing: initial;
                }
            }

            .focused& {
                pointer-events: all;
            }
        }
    }

    form {
        z-index: 3;

        .inputWrapper {
            display: flex;
            background-color: @panelGrayTransparent;
            padding: 6px 8px 6px 8px;
            // opacity: 0.5;

            .focused&, &:hover {
                // opacity: 1;
            }

            // Color outline
            margin-top: 8px;
            box-shadow: currentColor -1px 1px, currentColor -2px 2px;
            .saturate & {
                filter: saturate(300%);
            }

            .author {
            }

            #chatInput {
                position: relative;
                flex-grow: 1;
                z-index: 1;
                box-sizing: border-box;
                border: none;
                padding: 0;
                background-color: unset;
                color: @defaultGray;
                font-size: inherit;
                font-family: inherit;
                text-decoration: inherit;
                text-transform: initial;
                resize: none;
                letter-spacing: initial;

                &:focus {
                    outline: none;
                }
            }
        }
    }

    .spacing() {
        bottom: 0px;
        // top: 0px;
        left: 0px;
        right: 0px;
    }

    .chatGradient {
        position: fixed;
        width: inherit;
        height: inherit;
        .spacing();
        .padding();
        pointer-events: none;
        z-index: 2;
    }

    &.focused #chatVerticalGradient,
    &.focused #chatHorizontalGradient {
        background: none;
    }

    #chatVerticalGradient {
        background: linear-gradient(
            to bottom,
            @appBackground, 
            transparent
          );
    }

    #chatHorizontalGradient {
        z-index: 4;
        background: linear-gradient(
            to left,
            @appBackground, 
            transparent
          );
    }
}

